--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://dariuszdroba.github.io/presentation",
   "name": "presentation",
   "version": "0.1.0",
   "private": true,
