chore: add personal homepage dns

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dariuszdroba.github.io/presentation",
+  "homepage": "https://dariuszdroba.com",
   "name": "presentation",
   "version": "0.1.0",
   "private": true,
